LIST OF CHANGES FOR NPG-QC PACKAGE

 - Arguments given to the qc script are passed through to the relevant
   qc check object.
 - QC script does not try to infer the location of input files.
 - QC script accepts the rpt_list argument.
 - tag_index attribute of the check object cannot be assigned to undef.
 - added Broad Institute's RNA-SeQC to autoqc QC checks

release 62.1
 - Bug fix in build action for cgi files.

release 62.0
 - Towards composition-based autoqc:
   - npg_qc::autoqc::results::result - Composition-aware,
     id_run, position and path attributes become optional.
   - npg_qc::autoqc::qc_store - Use DBIx syntax for quering on tag_index
     (future compatibility with planned table schema changes), db load
     compositions of size 1 only.
   - npg_qc::autoqc::db_loader - Result classes support composition,
     but most tables have not been converted yet. Do not generate
     composition if no support in the result table.
   - npg_qc::Schema::ResultSet - Enchancement for a search for tables that
     do not yet support compositions: convert undefined values
     for columns under a unique constraint to database defaults.
 - SeqQC - outdated template for split_stats removed
 - genotype role refactored to remove hardcoded uri encoding            
 - remove contamination check that is not run any longer,
   result object remains
 - to keep similar code together and to avoid listing explicitly
   an increasing number of non-runnable checks, move checks_list()
   method to the collection object
 - genotype check, croak if error closing samtools pileup command
 - norm_fit
     - modify peak finding to allow for peaks in first/last bin
     - added monotonity condition when estimating stdev
     - drop stdev when outputting filtered modes
 
release 61.2
 - SeqQC:
   - Reintroduce collapser
   - using grunt/npm to automate js testing
 - VerifyBAMId changed condition MIN_AVG_DEPTH from > 4 to > 2 for fail

release 61.1
 - SeqQC